sumo/tests/sumo/extended/simulation_routing/assignment/errors/empty_taz/errors.sumo
Error: Source district '1' has no outgoing edges for '0'!
Error: Vehicle's '0' route has no edges.
Quitting (on error).
